Update methods to work faster and more stable
Also, refactor some fragments of code for it to be better readable